# genquery_flex_bison_port

./: CMakeLists.txt  README.md  edge_property.hpp  genquery_ast_types.hpp  genquery_scanner.hpp  genquery_sql.cpp  genquery_sql.hpp  genquery_stream_insertion.hpp  genquery_utilities.hpp  genquery_wrapper.cpp  genquery_wrapper.hpp  gq2.r  lexer.l  main.cpp  notes.txt  parser.y  table_column_key_maps.hpp
api_plugin/: CMakeLists.txt
api_plugin/include/irods/plugins/api/: genquery2_common.h
api_plugin/src/: plugin_factory.cpp  server.cpp
client/src/: main.cpp
microservice/: CMakeLists.txt
microservice/src/: column.cpp  common.hpp  design.txt  destroy.cpp  execute.cpp  genquery2.cpp  next_row.cpp
parser/: CMakeLists.txt  edge_property.hpp  genquery_sql.hpp  genquery_wrapper.cpp  lexer.l  main.cpp  parser.y  vertex_property.hpp
parser/dsl/: lexer.l  parser.y
parser/include/irods/: genquery_ast_types.hpp  genquery_sql.hpp  genquery_wrapper.hpp  table_column_key_maps.hpp
parser/src/: genquery_sql.cpp  genquery_wrapper.cpp
rule_engine/src/: main.cpp
