set(IRODS_MICROSERVICE_NAME msi_genquery2)

add_library(
  ${IRODS_MICROSERVICE_NAME}
  MODULE
  ${CMAKE_CURRENT_SOURCE_DIR}/src/genquery2.cpp)

target_compile_options(
  ${IRODS_MICROSERVICE_NAME}
  PRIVATE
  -Wall
  -Wextra
  -Werror)

target_compile_definitions(
  ${IRODS_MICROSERVICE_NAME}
  PRIVATE
  #${IRODS_COMPILE_DEFINITIONS}
  ${IRODS_COMPILE_DEFINITIONS_PRIVATE}
  IRODS_ENABLE_RE
  IRODS_ENABLE_SYSLOG)

target_include_directories(
  ${IRODS_MICROSERVICE_NAME}
  PRIVATE
  ${IRODS_INCLUDE_DIRS}
  ${IRODS_EXTERNALS_FULLPATH_BOOST}/include
  ${IRODS_EXTERNALS_FULLPATH_SPDLOG}/include
  ${IRODS_EXTERNALS_FULLPATH_FMT}/include)

target_link_libraries(
  ${IRODS_MICROSERVICE_NAME}
  PRIVATE
  irods_server)

add_dependencies(${IRODS_MICROSERVICE_NAME} irods_genquery2_server)

install(
  TARGETS ${IRODS_MICROSERVICE_NAME}
  LIBRARY DESTINATION ${IRODS_PLUGINS_DIRECTORY}/microservices)
